# cmakeBoilerPlate

./: CMakeLists.txt
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  hello.cc
include/libname/: Hello.hpp
src/: CMakeLists.txt  Hello.cc
tests/: CMakeLists.txt  test_say.cc
